--- a/package.json
+++ b/package.json
@@ -30,9 +30,8 @@
   },
   "scripts": {
     "test": "bun test",
-    "build": "bun i && bun run fix-package-name && rm -rf *.tsbuildinfo && rm -rf dist/*.* && bun run bundler/bundler.ts && bun run test && bun run build:declaration",
+    "build": "bun i && rm -rf *.tsbuildinfo && rm -rf dist/*.* && bun run bundler/bundler.ts && bun run test && bun run build:declaration",
     "build:declaration": "tsc --emitDeclarationOnly --project tsconfig.types.json",
-    "fix-package-name": "npm explore package-name-fixer -- bun start \"$(pwd)\"",
     "auto-publish": "npm explore @dobuki/auto-publish -- bun run auto-publish \"$(pwd)\""
   },
   "publishConfig": {
@@ -42,19 +41,7 @@
     "dist"
   ],
   "devDependencies": {
-    "@dobuki/auto-publish": "^1.0.7",
-    "@types/bun": "^1.0.8",
-    "@types/jest": "^29.5.12",
-    "@types/mocha": "^10.0.3",
-    "@types/react": "^18.2.60",
-    "bun": "^1.0.29",
-    "bun-types": "^1.0.29",
-    "jest": "^29.7.0",
-    "package-name-fixer": "^1.0.9",
-    "prettier": "^3.2.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^5.3.3"
+    "@dobuki/dev-dependencies": "^1.0.6"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
